examples/__outputs__/20_output/output_return-error_return-error-execution__return-error-execution.output.txt
/some/path/to/output_return-error_return-error-execution__return-error-execution.ts:6
import { serveSchema, show } from '../$/helpers.js'
         ^

SyntaxError: The requested module '../$/helpers.js' does not provide an export named 'serveSchema'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:XX:XX)
    at async ModuleJob.run (node:internal/modules/esm/module_job:XX:XX)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:XX:XX)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:XX:XX)

Node.js vXX.XX.XX